# server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  server.py  server.pyproj  server1.pyproj  server1.sln
.github/workflows/: main.yml
docker/: benchmark.Dockerfile
