[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Vadim Vikhrachev <vikhrachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.0"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
